--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 
     <dependency>
       <groupId>com.fifesoft</groupId>
+      <artifactId>languagesupport</artifactId>
+      <version>3.1.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fifesoft</groupId>
       <artifactId>rstaui</artifactId>
       <version>3.3.1</version>
     </dependency>
