--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,14 @@
       <artifactId>autocomplete</artifactId>
       <version>3.3.1</version>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>23.0.0</version>
+          <scope>compile</scope>
+      </dependency>
 
-<!--    <dependency>-->
+      <!--    <dependency>-->
 <!--      <groupId>org.projectlombok</groupId>-->
 <!--      <artifactId>lombok</artifactId>-->
 <!--      <version>1.16.10</version>-->
